--- a/Process/Process.csproj
+++ b/Process/Process.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\LoginForms\LoginForms.csproj" />
     <ProjectReference Include="..\Math\Maths.csproj" />
     <ProjectReference Include="..\Numbers\Numbers.csproj" />
   </ItemGroup>
