--- a/Process/Process.csproj
+++ b/Process/Process.csproj
@@ -8,6 +8,7 @@
     <ProjectReference Include="..\LoginForms\LoginForms.csproj" />
     <ProjectReference Include="..\Math\Maths.csproj" />
     <ProjectReference Include="..\Numbers\Numbers.csproj" />
+    <ProjectReference Include="..\StringFunctions\StringFunctions.csproj" />
   </ItemGroup>
 
 </Project>
