--- a/StudentAttendenceManagementProject/StudentAttendenceManagementProject/StudentAttendenceManagementProject.csproj
+++ b/StudentAttendenceManagementProject/StudentAttendenceManagementProject/StudentAttendenceManagementProject.csproj
@@ -150,6 +150,12 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Image\micah-williams-lmFJOx7hPc4-unsplash.jpg" />
+    <Content Include="Image\pexels-ann-h-1762851 %281%29.jpg" />
+    <Content Include="Image\pexels-henry-&amp;-co-1939485.jpg" />
+    <Content Include="Image\pexels-lumn-399161.jpg" />
+    <Content Include="Image\pexels-pixabay-326311 %281%29.jpg" />
+    <Content Include="Image\pexels-pixabay-531880.jpg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
