--- a/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Web.config
+++ b/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Web.config
@@ -18,6 +18,9 @@
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
+  <connectionStrings>
+    <add name="connectionstring" connectionString="data source=DESKTOP-HQNFTEO;initial catalog=master;integrated security=true"/>
+  </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -56,9 +59,6 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-  <connectionStrings>
-    <add name="masterEntities" connectionString="metadata=res://*/Models.StudentModel.csdl|res://*/Models.StudentModel.ssdl|res://*/Models.StudentModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-HQNFTEO;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
@@ -69,4 +69,4 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-</configuration>
+  </configuration>
