--- a/StudentAttendenceManagementProject/Repository/Repository.csproj
+++ b/StudentAttendenceManagementProject/Repository/Repository.csproj
@@ -8,4 +8,10 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="System.Configuration">
+      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.7.2\System.Configuration.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
