--- a/StudentAttendenceManagementProject/StudentAttendenceManagementProject/StudentAttendenceManagementProject.csproj
+++ b/StudentAttendenceManagementProject/StudentAttendenceManagementProject/StudentAttendenceManagementProject.csproj
@@ -150,6 +150,9 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Image\images %281%29.jpeg" />
+    <Content Include="Image\images %283%29.jpeg" />
+    <Content Include="Image\images %284%29.jpeg" />
     <Content Include="Image\micah-williams-lmFJOx7hPc4-unsplash.jpg" />
     <Content Include="Image\pexels-ann-h-1762851 %281%29.jpg" />
     <Content Include="Image\pexels-henry-&amp;-co-1939485.jpg" />
