--- a/StudentAttendenceManagementProject/StudentsAttendenceManagementProj/StudentsAttendenceManagementProj.csproj
+++ b/StudentAttendenceManagementProject/StudentsAttendenceManagementProj/StudentsAttendenceManagementProj.csproj
@@ -163,12 +163,13 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\StudentController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\StudentClass.cs" />
+    <Compile Include="Models\LoginClass.cs" />
     <Compile Include="MSreplication_options.cs">
       <DependentUpon>StudentModel.tt</DependentUpon>
     </Compile>
@@ -280,6 +281,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Login\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
