Example of Abstract Class

--- a/StudentAttendenceManagementProject/StudentAttendenceManagementProject/StudentAttendenceManagementProject.csproj
+++ b/StudentAttendenceManagementProject/StudentAttendenceManagementProject/StudentAttendenceManagementProject.csproj
@@ -161,6 +161,9 @@
     <Content Include="Image\pexels-pixabay-531880.jpg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="..\.editorconfig">
+      <Link>.editorconfig</Link>
+    </Content>
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
