--- a/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Web.config
+++ b/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Web.config
@@ -19,7 +19,7 @@
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
   <connectionStrings>
-    <add name="connectionstring" connectionString="data source=DESKTOP-HQNFTEO;initial catalog=master;integrated security=true"/>
+    <add name="connectionstring" connectionString="data source=VENKI;initial catalog=master;integrated security=true"/>
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
