--- a/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Web.config
+++ b/StudentAttendenceManagementProject/StudentAttendenceManagementProject/Web.config
@@ -18,6 +18,17 @@
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
+  <system.net>
+    <mailSettings>
+      <smtp from="rbhuvaneswariece@gmail.com">
+        <network host="smtp-mail.outlook.com"
+                       port="587"
+                       userName="rbhuvaneswariece@gmail.com"
+                      password="Bhuvana@123"
+                        />
+      </smtp>
+    </mailSettings>
+  </system.net>
   <connectionStrings>
     <add name="connectionstring" connectionString="data source=VENKI;initial catalog=master;integrated security=true"/>
   </connectionStrings>
